Cean up some java pieces; add SNS topic; add logging for Rest API